# qr-catalog

./: Cargo.toml  env_vars
sql/: add-category  delete-all-categories-of-item.sql  init.sql  insert-category.sql  insert-item-category.sql  is-item-in-category.sql  is-no-category-assigned-to-item.sql  select-all-category-names.sql  select-category-names-of-item.sql  test.sql
src/: db.rs  main.rs  xdb.rs
templates/: index.html  item.html
