[package]
name = "qr-catalog"
version = "0.2.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-multipart = "0.6.2"
actix-files = "0.6.6"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
askama = "0.12.1"
tokio = {version = "1.38.0", features = ["fs"] }
chrono = "0.4.38"
serde = {version = "1.0.203", features = ["derive"] }
image = "0.25.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
rust-embed = "8.4.0"
mime_guess = "2.0.5"
env_logger = "0.11.3"
log = "0.4.22"
sqlx ={ version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"]}
